--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.9.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-stars": "^2.2.5"
   },
   "scripts": {
     "start": "react-scripts start",
