--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.9.0",
+    "react-player": "^1.11.2",
+    "react-responsive": "^7.0.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-stars": "^2.2.5",
