--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
     "antd": "^3.21.4",
+    "antd-img-crop": "^2.1.2",
     "axios": "^0.19.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "^24.8.0",
