--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-named-asset-import": "^0.3.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-react-app": "^9.0.0",
     "babel-preset-react-native-stage-0": "^1.0.1",
     "camelcase": "^5.2.0",
@@ -56,7 +57,7 @@
     "ra-data-json-server": "^2.9.6",
     "react": "^16.9.0",
     "react-admin": "^2.9.6",
-    "react-app-polyfill": "^1.0.1",
+    "react-app-polyfill": "^1.0.4",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.9.0",
     "react-player": "^1.11.2",
@@ -91,6 +92,7 @@
       "not op_mini all"
     ],
     "development": [
+      "ie 11",
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
