--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.9.0",
     "react-player": "^1.11.2",
+    "react-render-html": "^0.6.0",
     "react-responsive": "^7.0.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
